fixtures/errors/stack_overflow_backtrace.expected
exit_code: 2
--- stdout ---
--- stderr ---
Runtime error: shadow stack overflow: sp=98904 + 40 > end=98920
    at recurse (errors/stack_overflow_backtrace.js:2:1) (x50)
